# universalAirdrop

./: .gitignore  CMakeLists.txt  Makefile  README.md  airdrop  build.bat  test_crypto  test_file_transfer  test_integration  test_protocol  todo.txt
.claude/: settings.local.json
include/universal_airdrop/: crypto.h  file_transfer.h  gui_helpers.h  main_window.h  platform.h  protocol.h  tcp_client.h  tcp_server.h  udp_discovery.h
src/: crypto.cpp  file_transfer.cpp  gui_main.cpp  main.cpp  tcp_client.cpp  tcp_server.cpp  udp_discovery.cpp
src/gui/: gui_helpers.cpp  main_window.cpp  main_window.ui
tests/: test_crypto.cpp  test_file_transfer.cpp  test_integration.cpp  test_protocol.cpp
